# mist-hep

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DISCUSSION.md  README.md
.github/workflows/: ci.yml  docs.yml
cmake/: mist-hepConfig.cmake.in
docs/: CODING_CONVENTIONS.md  Doxyfile
include/mist/hep/: globals.h  hep.h  owned.h  stats.h
include/mist/hep/fit/: functions.h
include/mist/hep/graph/: algebra.h  binning.h  smoothing.h  transforms.h
include/mist/hep/histo/: fill.h  histo.h
include/mist/hep/signal/: waveform.h
src/hep/fit/: functions.cxx
test/: tester_fit.cxx  tester_graph.cxx  tester_histo.cxx  tester_owned.cxx  tester_signal.cxx  tester_stats.cxx
